Finished Without Animations

--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body {
 
 #book_display {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
     flex-wrap: wrap;
 }
 
